# people_tracker_denbyk

./: CMakeLists.txt  README.md  makeAndRun.sh  manifest.xml  package.xml
include/: TrackingDenoiser.h
riferimento completo giuseppe/hostess_robot-master/cob_people_detection/common/src/: face_recognizer.cpp
riferimento completo giuseppe/hostess_robot-master/cob_people_detection/ros/launch/: face_recognizer_params.yaml
riferimento completo giuseppe/hostess_robot-master/cob_people_detection/ros/src/: detection_tracker_node.cpp  face_capture_node.cpp  face_recognizer_node.cpp
riferimento completo giuseppe/hostess_robot-master/hostess_full/launch/: hostess_robot.launch
riferimento completo giuseppe/hostess_robot-master/hostess_full/launch/include/: hostess_user_registration.launch.xml  nav.rviz  people_detection.launch.xml
riferimento completo giuseppe/hostess_robot-master/hostess_robot/launch/include/: hostess_robot.rviz
riferimento completo giuseppe/hostess_robot-master/hostess_skeleton_tracker/: package.xml
riferimento completo giuseppe/hostess_robot-master/hostess_skeleton_tracker/launch/: hostess_skeleton_pan_tracker.launch  hostess_skeleton_tracker.launch
riferimento completo giuseppe/hostess_robot-master/hostess_skeleton_tracker/launch/include/: pan_joint.yaml
riferimento completo giuseppe/hostess_robot-master/hostess_skeleton_tracker/src/: follow_me.cpp  hostess_skeleton_kalman.cpp  identity_setter.cpp  multiple_skeleton_tracker.cpp  openni_tracker.cpp
riferimento completo giuseppe/hostess_robot-master/hostess_skeleton_tracker/src/kalman/: kalman_filter.cpp
riferimento completo giuseppe/hostess_robot-master/hostess_user_registration/: CMakeLists.txt
riferimento completo giuseppe/hostess_robot-master/hostess_user_registration/launch/: hostess_user_registration_fake_action_server.launch
riferimento completo giuseppe/hostess_robot-master/hostess_user_registration/scripts/: app.py
riferimento completo giuseppe/hostess_robot-master/hostess_user_registration/scripts/config/: config.py
riferimento completo giuseppe/hostess_robot-master/hostess_user_registration/scripts/static/: jol_gui.pgm
riferimento completo giuseppe/hostess_robot-master/hostess_user_registration/scripts/templates/: index.html  new_goal.html  users.html
riferimento completo giuseppe/hostess_robot-master/hostess_user_registration/src/: server.cpp
riferimento completo/hostess_robot-master/: README.md
riferimento completo/hostess_robot-master/cob_people_detection/: CMakeLists.txt  nodelet_plugins.xml
riferimento completo/hostess_robot-master/cob_people_detection/common/include/cob_people_detection/: face_recognizer_algorithms.h
riferimento completo/hostess_robot-master/cob_people_detection/ros/launch/: detection_tracker_params.yaml
riferimento completo/hostess_robot-master/hostess_full/: CMakeLists.txt  package.xml
riferimento completo/hostess_robot-master/hostess_full/launch/include/: skeleton_tracker.launch.xml
riferimento completo/hostess_robot-master/hostess_robot/: CMakeLists.txt  package.xml
riferimento completo/hostess_robot-master/hostess_robot/launch/: hostess_robot.launch
riferimento completo/hostess_robot-master/hostess_robot/launch/include/: nav.rviz  skeleton_tracker.launch.xml
riferimento completo/hostess_robot-master/hostess_skeleton_tracker/: CMakeLists.txt
riferimento completo/hostess_robot-master/hostess_skeleton_tracker/include/: pan_controller.hpp
riferimento completo/hostess_robot-master/hostess_skeleton_tracker/src/: dynamixel_mediator.cpp  hostess_skeleton_tracker.cpp  multiple_skeleton_tracker.cpp  pan_controller.cpp  twist_mediator.cpp
riferimento completo/hostess_robot-master/hostess_user_registration/: package.xml
riferimento completo/hostess_robot-master/hostess_user_registration/scripts/static/: scripts.js  styles.css
riferimento completo/hostess_robot-master/hostess_user_registration/scripts/templates/: delete_goals.html  delete_users.html  goals.html  new_user.html  user_calibration.html
src/: OLDPeopleTracker_denbyk.cpp  PeopleTrackerKalman_denbyk.cpp  PeopleTracker_denbyk.cpp  REFkalman2d  REFmultiple_skeleton_tracker.cpp  TrackingDenoiser.cpp  people_tracker.cpp  testKalman.cpp
