<?xml version="1.0"?>
<package>
  <name>people_tracker_denbyk</name>
  <version>0.0.0</version>
  <description>
  This package provides people tracking capabilities.
  </description>
  <maintainer email="denbyk44@gmail.com">denbyk</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>tf</run_depend>
</package>
